@@ -1,3 +1,8 @@
+2006-02-09  Per Bothner  <per@bothner.com>
+
+	* ApplyToArgs.java (match1, match2, match3, match4, matchN,
+	check1, check2, check3, check4, checkN): New methods.
+
 2006-02-07  Per Bothner  <per@bothner.com>
 
 	* GetNamedPart.java (makeExp): New convenience factory method.
